--- a/Currency-Converter/package.json
+++ b/Currency-Converter/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.1",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "react": "^19.0.0",
@@ -27,7 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.15",
+    "tailwindcss": "^4.1.1",
     "vite": "^6.2.0"
   }
 }
